# FrameQ

./: .env.example  .gitignore  AGENTS.md  README.md  TASKS.md  douyin_video_download_solution.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: desktop-release.yml  macos-intel-acceptance.yml  server-ci.yml  unix-process-supervisor.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
app/src/: App.css  App.css.test.ts  App.tsx  accountClient.test.ts  accountClient.ts  accountCopy.test.ts  accountState.test.ts  accountState.ts  aiCreditsCopy.test.ts  aiCreditsCopy.ts  desktopWorkerContract.test.ts  desktopWorkerProtocol.test.ts  desktopWorkerProtocol.ts  historyClient.test.ts  historyClient.ts  insightPreferenceFlow.test.ts  insightPreferenceFlow.ts  insightPreferencePromptSemantics.ts  insightPreferences.test.ts  insightPreferences.ts  localMediaClient.test.ts  localMediaClient.ts  localMediaContract.test.ts  localMediaContract.ts  main.tsx  modelDownloadState.test.ts  modelDownloadState.ts  safeTechnicalDetails.test.ts  safeTechnicalDetails.ts  settingsClient.test.ts  settingsClient.ts  taskArtifacts.ts  taskWorkspaceViewModel.test.ts  taskWorkspaceViewModel.ts  tauriIpcProtocol.test.ts  tauriIpcProtocol.ts  transcriptDetailClient.test.ts  transcriptDetailClient.ts  transcriptReviewState.test.ts  transcriptReviewState.ts  (+16 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/: .env.template
app/src-tauri/src/: account.rs  asr_model.rs  atomic_files.rs  deep_link.rs  diagnostics.rs  draft_detail.rs  history.rs  history_deletion.rs  insight_preferences.rs  lib.rs  local_media.rs  local_media_contract.rs  local_media_contract_tests.rs  progress_event.rs  runtime.rs  settings.rs  task_manifest.rs  transcript_detail.rs  ui_preferences.rs  updates.rs  video_processing.rs  window_chrome.rs  worker_command.rs
app/src-tauri/src/task_manifest/: access.rs  coordinator.rs  schema.rs  source_identity.rs  storage.rs  tests.rs  transaction.rs
app/src-tauri/src/transcript_detail/: audio_playback.rs  edit_storage.rs  segments.rs  tests.rs
app/src-tauri/src/video_processing/: local_media.rs  retry_insights.rs  task_result.rs  url_cache.rs  url_processing.rs
app/src-tauri/src/worker_runtime/: command.rs  facade.rs  mod.rs  result_protocol.rs  runner.rs  supervisor.rs
app/src-tauri/src/worker_runtime/runner/: process_io.rs  progress.rs  terminal.rs  tests.rs  watchdog.rs
app/src-tauri/src/worker_runtime/runner/tests/: fixtures.rs  lifecycle.rs  progress.rs  terminal.rs  watchdog.rs
app/tests/: app-input.browser.test.ts  tauri-window-config.test.ts  updater-manifest-release.test.ts
contracts/: desktop-worker-contract.json  platform-url-support-contract.json  task-artifact-transaction-v1.json
deploy/: README.md  server-deployment.md
deploy/nginx/: frameq-proxy-headers.conf  frameq-server.conf
deploy/systemd/: frameq-server.service
design-system/: README.md  globals.css
docs/: ARCHITECTURE.md  DESIGN.md  EXECUTION_GATES.md  SECURITY.md
docs/design-docs/: 2026-06-17-installer-distribution-plan.md  2026-07-15-desktop-i18n-and-ai-output-language.md  2026-07-15-draft-platform-selection.md  2026-07-15-draft-result-editor.md  2026-07-16-local-media-file-import.md  2026-07-18-process-video-request-contract-v3.md  2026-07-18-rust-worker-runtime-lifecycle.md  2026-07-18-source-identity-dependency-boundary.md  2026-07-18-task-access-facade.md  2026-07-18-youtube-generic-chinese-subtitle.md  2026-07-19-app-composition-integration-coverage.md  2026-07-19-closed-worker-terminal-results.md  2026-07-19-media-preparation-facade.md  2026-07-19-typed-worker-job-facade.md  2026-07-19-video-processing-task-result-boundary.md  2026-07-19-worker-atomic-artifact-commit.md  2026-07-20-asr-module-split.md  2026-07-20-bilibili-fallback-module-split.md  2026-07-20-douyin-fallback-module-split.md  2026-07-20-transcript-detail-module-split.md  2026-07-20-video-processing-module-split.md  2026-07-20-xiaohongshu-fallback-module-split.md  2026-07-21-server-route-module-split.md  2026-07-21-task-manifest-module-split.md  2026-07-21-worker-pipeline-module-split.md  2026-07-22-rust-worker-watchdog.md  2026-07-22-server-auth-quota-operations-hardening.md  2026-07-23-frontend-transcript-controller-split.md  2026-07-23-rust-worker-runner-module-split.md  2026-07-23-server-store-prisma-module-split.md  2026-07-24-asr-model-download-job-capability-boundary.md  2026-07-24-python-worker-application-facade.md  2026-07-24-tauri-ipc-runtime-decoding-boundary.md  core-beliefs.md  frameq-code-audit-uml.md  web-marketing-site-design.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/product-specs/: 2026-06-16-douyin-video-transcription-client.md  2026-06-18-installer-distribution.md  2026-06-21-account-billing.md  index.md  (+23 more)
scripts/: build-installer.mjs  build-installer.ps1  check-i18n-literals.mjs  check-release-version.mjs  make-macos-dmg.sh  normalize-updater-manifest.mjs  tauri-dev-fresh-worker.mjs  validate_agents_docs.py
server/: .env.example  package.json
(+408 files in other folders)
