[project]
name = "frameq-worker"
version = "0.1.0"
description = "Python worker for FrameQ desktop video transcription workflows."
requires-python = ">=3.11"
dependencies = [
    "funasr>=1.2.7",
    "modelscope>=1.37.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
qwen = ["qwen-asr>=0.0.6"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["worker"]
testpaths = ["worker/tests"]
